# mountforge_editor

./: Cargo.toml  README.md
data/models/: low_poly_palm.glb  low_poly_tree.glb
data/shaders/: terrain_material.wgsl
src/: camera.rs  details.rs  draw.rs  edit_chunks.rs  main.rs  sculpt.rs  serialize.rs  terrain.rs  ui.rs
