[package]
name = "mountforge_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.12", features=["file_watcher"]}
bevy_egui = "0.24"
bevy_mod_raycast = "0.16"
bevy-inspector-egui = "0.22"
bevy_atmosphere = "0.8"
bevy_panorbit_camera = "0.10"

noise = "0.8"
futures-lite = "1.12"
rfd = "0.10"
rand = "0.8"

serde = "1.0"
bincode = "1.3"